# 3char

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: terminal_assets.qrc
include/core/: AppController.hpp  ConfigStore.hpp  Crypto.hpp  SessionStore.hpp
include/data/: Models.hpp
include/net/: OllamaClient.hpp
include/session/: LocalSession.hpp  PtySession.hpp  SessionBackend.hpp  SshSession.hpp
include/ui/: MainWindow.hpp  MasterPasswordDialog.hpp  ProfileEditorDialog.hpp  ProxyEditorDialog.hpp  QuadTerminalView.hpp  SecretsEditorDialog.hpp  TerminalTab.hpp
src/: main.cpp
src/core/: AppController.cpp  ConfigStore.cpp  Crypto.cpp  SessionStore.cpp
src/data/: Models.cpp
src/net/: OllamaClient.cpp
src/session/: LocalSession.cpp  PtySession.cpp  SshSession.cpp
src/ui/: MainWindow.cpp  MasterPasswordDialog.cpp  ProfileEditorDialog.cpp  ProxyEditorDialog.cpp  QuadTerminalView.cpp  SecretsEditorDialog.cpp  TerminalTab.cpp
tests/: config_tests.cpp
